--- a/frontend/css/base.css
+++ b/frontend/css/base.css
@@ -168,7 +168,7 @@ ul.header-item .opac:hover {
 	text-transform: uppercase;
 }
 .title-area-info-list {
-	width:450px;
+	width:100%;
 }
 .title-three {
 	width:940px;
@@ -922,4 +922,26 @@ textarea {
 	height:12px;
 	background-color:rgb(204,204,204);
 	clear: both;
+}
+/*Rochim EIJI*/
+/*login*/
+.box-login {
+  text-align:center;
+  margin-top:10%;
+  border:0px solid black;
+  height:50%;
+}
+.box {
+  background:rgb(134,196,63);
+  width:20%;
+  margin:auto;
+  padding:3% 3% 1% 3%;
+  border-radius:5px;
+  box-shadow:0px 0px 10px #000;
+}
+.help-inline {
+  text-align:center;
+  margin-top:-3%;
+  font-size:80%;
+  color:color: rgb(255, 0, 0);
 }
