--- a/frontend/css/media-query-tablet.css
+++ b/frontend/css/media-query-tablet.css
@@ -1414,7 +1414,7 @@ ul.tabs-responsive li a {
 /*=================================================*/
 
 #quovolver-three {
-	width:450px;
+	width:100%;
 	margin:20px auto 60px auto;
 }
 .block-three,
