--- a/frontend/css/assetsLogin/css/base.css
+++ b/frontend/css/assetsLogin/css/base.css
@@ -43,7 +43,8 @@
 /* #Basic Styles
 ================================================== */
 	body { 
-		background: url(../images/bg.jpg) #10a5d3;
+		background: url(../images/bg.jpg) fixed;
+		background-size:100% 100%;
 		font: 14px/21px "HelveticaNeue", "Helvetica Neue", Helvetica, Arial, sans-serif;
 		color: #444; 
 		-webkit-font-smoothing: antialiased; /* Fix for webkit rendering */
