--- a/frontend/css/base.css
+++ b/frontend/css/base.css
@@ -925,23 +925,18 @@ textarea {
 }
 /*Rochim EIJI*/
 /*login*/
-.box-login {
-  text-align:center;
-  margin-top:10%;
-  border:0px solid black;
-  height:50%;
+.tbArticle{
+	width:100%;
+	border:1px solid rgb(134,196,63);
 }
-.box {
-  background:rgb(134,196,63);
-  width:20%;
-  margin:auto;
-  padding:3% 3% 1% 3%;
-  border-radius:5px;
-  box-shadow:0px 0px 10px #000;
+.tbArticle td,.tbArticle th{
+	padding:5px 10px;
 }
-.help-inline {
-  text-align:center;
-  margin-top:-3%;
-  font-size:80%;
-  color:color: rgb(255, 0, 0);
+.tbArticle th{
+	text-align:center;
+	background:rgb(134,196,63);
+	color:#fff;
+}
+.tbArticle .akt{
+	background:#eee;
 }
